Name:                vty-ui
Version:             0.5
Synopsis:            A user interface composition library for Vty
Description:         An extensible library of user interface widgets
                     for composing and laying out Vty user interfaces.
                     This library provides a collection of primitives
                     for building and composing widgets and creating
                     Vty Images.  This library is intended to make
                     non-trivial user interfaces trivial to express
                     and modify without having to worry about terminal
                     size.
Category:            User Interfaces
Author:              Jonathan Daugherty <drcygnus@gmail.com>
Maintainer:          Jonathan Daugherty <drcygnus@gmail.com>
Build-Type:          Simple
License:             BSD3
License-File:        LICENSE
Cabal-Version:       >= 1.2
Homepage:            http://codevine.org/vty-ui/

Flag testing
    Description:     Build for testing
    Default:         False

Library
  Build-Depends:
    base >= 4 && < 5,
    vty >= 4.6 && < 4.7,
    containers >= 0.2 && < 0.4,
    pcre-light >= 0.3 && < 0.4

  GHC-Options:       -Wall -Werror
  Hs-Source-Dirs:    src
  Exposed-Modules:
          Graphics.Vty.Widgets.All
          Graphics.Vty.Widgets.Text
          Graphics.Vty.Widgets.Core
          Graphics.Vty.Widgets.Composed
          Graphics.Vty.Widgets.Base
          Graphics.Vty.Widgets.List
          Graphics.Vty.Widgets.Borders
          Graphics.Vty.Widgets.Collections
          Graphics.Vty.Widgets.EventLoop
          Graphics.Vty.Widgets.Edit
          Graphics.Vty.Widgets.Util
          Graphics.Vty.Widgets.Table
          Graphics.Vty.Widgets.CheckBox
          Graphics.Vty.Widgets.Padding
          Graphics.Vty.Widgets.Alignment
          Graphics.Vty.Widgets.Limits
          Graphics.Vty.Widgets.Fills
          Graphics.Vty.Widgets.Centering
  Other-Modules:
          Text.Trans.Tokenize

Executable vty-ui-tests
  Build-Depends:
    QuickCheck >= 2.4 && < 2.5

  CPP-Options: -DTESTING
  GHC-Options: -Wall -Werror

  if !flag(testing)
    Buildable:     False
  end
  Hs-Source-Dirs:  src,test,test/src
  Main-is:         TestDriver.hs

  Other-Modules:
        Tests.Instances
        Tests.Util
        Tests.Text
        Tests.Tokenize

Executable vty-ui-demo
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         Demo.hs
  Build-Depends:
    mtl >= 2.0 && < 2.1

Executable vty-ui-demo2
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         Demo2.hs
  Build-Depends:
    mtl >= 2.0 && < 2.1,
    bytestring >= 0.9 && < 1.0
