Name:                vty-ui
Version:             0.5
Synopsis:            A user interface composition library for Vty
Description:         An extensible library of user interface widgets
                     for composing and laying out Vty user interfaces.
                     This library provides a collection of primitives
                     for building and composing widgets and creating
                     Vty Images.  This library is intended to make
                     non-trivial user interfaces trivial to express
                     and modify without having to worry about terminal
                     size.
Category:            User Interfaces
Author:              Jonathan Daugherty <jtd@galois.com>
Maintainer:          Jonathan Daugherty <jtd@galois.com>
Build-Type:          Simple
License:             BSD3
License-File:        LICENSE
Cabal-Version:       >= 1.2
Homepage:            http://codevine.org/vty-ui/

Data-Files:
    doc/ch1/api_notes.tex
    doc/ch1/getting_started.tex
    doc/ch1/introduction.tex
    doc/ch2/building_applications.tex
    doc/ch2/collections.tex
    doc/ch2/composing.tex
    doc/ch2/event_loop.tex
    doc/ch2/focus_groups.tex
    doc/ch2/handling_user_input.tex
    doc/ch3/cursor_positioning.tex
    doc/ch3/deferring_to_children.tex
    doc/ch3/growth_policy_functions.tex
    doc/ch3/implementing_composite_widgets.tex
    doc/ch3/implementing_event_handlers.tex
    doc/ch3/implementing_widgets.tex
    doc/ch3/new_widget_type.tex
    doc/ch3/rendering.tex
    doc/ch3/widget_positioning.tex
    doc/ch3/widgetimpl_api.tex
    doc/ch4/Borders.tex
    doc/ch4/Box.tex
    doc/ch4/Button.tex
    doc/ch4/Centering.tex
    doc/ch4/CheckBox.tex
    doc/ch4/Collection.tex
    doc/ch4/Dialog.tex
    doc/ch4/DirBrowser.tex
    doc/ch4/Edit.tex
    doc/ch4/Fills.tex
    doc/ch4/Fixed.tex
    doc/ch4/FormattedText.tex
    doc/ch4/guided_tour.tex
    doc/ch4/Limits.tex
    doc/ch4/List.tex
    doc/ch4/Padded.tex
    doc/ch4/ProgressBar.tex
    doc/ch4/Table.tex
    doc/macros.tex
    doc/Makefile
    doc/manual.tex
    doc/title_page.tex
    doc/toc.tex

Flag testing
    Description:     Build for testing
    Default:         False

Library
  Build-Depends:
    base >= 4 && < 5,
    vty >= 4.6 && < 4.7,
    containers >= 0.2 && < 0.4,
    pcre-light >= 0.3 && < 0.4,
    directory >= 1.0 && < 1.1,
    filepath >= 1.1 && < 1.2,
    unix >= 2.4 && < 2.5

  GHC-Options:       -Wall

  Hs-Source-Dirs:    src
  Exposed-Modules:
          Graphics.Vty.Widgets.All
          Graphics.Vty.Widgets.Text
          Graphics.Vty.Widgets.Core
          Graphics.Vty.Widgets.Box
          Graphics.Vty.Widgets.List
          Graphics.Vty.Widgets.Borders
          Graphics.Vty.Widgets.Collections
          Graphics.Vty.Widgets.EventLoop
          Graphics.Vty.Widgets.Edit
          Graphics.Vty.Widgets.Util
          Graphics.Vty.Widgets.Table
          Graphics.Vty.Widgets.CheckBox
          Graphics.Vty.Widgets.Padding
          Graphics.Vty.Widgets.Limits
          Graphics.Vty.Widgets.Fixed
          Graphics.Vty.Widgets.Fills
          Graphics.Vty.Widgets.Centering
          Graphics.Vty.Widgets.Skins
          Graphics.Vty.Widgets.Events
          Graphics.Vty.Widgets.Dialog
          Graphics.Vty.Widgets.Button
          Graphics.Vty.Widgets.ProgressBar
          Graphics.Vty.Widgets.DirBrowser
  Other-Modules:
          Text.Trans.Tokenize

Executable vty-ui-tests
  Build-Depends:
    QuickCheck >= 2.4 && < 2.5

  CPP-Options: -DTESTING
  GHC-Options: -Wall

  if !flag(testing)
    Buildable:     False
  end
  Hs-Source-Dirs:  src,test,test/src
  Main-is:         TestDriver.hs
  if os(darwin)
    Extra-Lib-Dirs:  /usr/lib

  Other-Modules:
        Tests.Instances
        Tests.Util
        Tests.FormattedText
        Tests.Tokenize

Executable vty-ui-demo
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         Demo.hs
  if os(darwin)
    Extra-Lib-Dirs:  /usr/lib
  Build-Depends:
    mtl >= 2.0 && < 2.1

Executable vty-ui-demo2
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         Demo2.hs
  if os(darwin)
    Extra-Lib-Dirs:  /usr/lib
  Build-Depends:
    mtl >= 2.0 && < 2.1,
    bytestring >= 0.9 && < 1.0,
    time >= 1.1 && < 1.2,
    old-locale >= 1.0 && < 1.1

Executable vty-ui-demo3
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         Demo3.hs
  if os(darwin)
    Extra-Lib-Dirs:  /usr/lib
  Build-Depends:
    mtl >= 2.0 && < 2.1

Executable vty-ui-phoneinputdemo
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         PhoneInputDemo.hs
  if os(darwin)
    Extra-Lib-Dirs:  /usr/lib
  Build-Depends:
    mtl >= 2.0 && < 2.1

Executable vty-ui-dialog
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         Dialog.hs
  if os(darwin)
    Extra-Lib-Dirs:  /usr/lib
  Build-Depends:
    mtl >= 2.0 && < 2.1
