Name:                vty-ui
Version:             1.3.1
Synopsis:            An interactive terminal user interface library
                     for Vty
Description:         An extensible library of user interface widgets
                     for composing and laying out Vty user interfaces.
                     This library provides a collection of widgets for
                     building and composing interactive interactive,
                     event-driven terminal interfaces.  This library
                     is intended to make non-trivial user interfaces
                     easy to express and modify without having to
                     worry about terminal size.
Category:            User Interfaces
Author:              Jonathan Daugherty <jtd@galois.com>
Maintainer:          Jonathan Daugherty <jtd@galois.com>
Build-Type:          Simple
License:             BSD3
License-File:        LICENSE
Cabal-Version:       >= 1.6
Homepage:            http://codevine.org/vty-ui/

Data-Files:
    doc/ch1/api_notes.tex
    doc/ch1/getting_started.tex
    doc/ch1/main.tex
    doc/ch2/main.tex
    doc/ch2/collections.tex
    doc/ch2/composing.tex
    doc/ch2/event_loop.tex
    doc/ch2/focus_groups.tex
    doc/ch2/handling_user_input.tex
    doc/ch3/cursor_positioning.tex
    doc/ch3/deferring_to_children.tex
    doc/ch3/growth_policy_functions.tex
    doc/ch3/implementing_composite_widgets.tex
    doc/ch3/implementing_event_handlers.tex
    doc/ch3/main.tex
    doc/ch3/new_widget_type.tex
    doc/ch3/rendering.tex
    doc/ch3/widget_positioning.tex
    doc/ch3/widgetimpl_api.tex
    doc/ch4/Borders.tex
    doc/ch4/Box.tex
    doc/ch4/Button.tex
    doc/ch4/Centering.tex
    doc/ch4/CheckBox.tex
    doc/ch4/Collection.tex
    doc/ch4/Dialog.tex
    doc/ch4/DirBrowser.tex
    doc/ch4/Edit.tex
    doc/ch4/Fills.tex
    doc/ch4/Groups.tex
    doc/ch4/Fixed.tex
    doc/ch4/FormattedText.tex
    doc/ch4/main.tex
    doc/ch4/Limits.tex
    doc/ch4/List.tex
    doc/ch4/Padded.tex
    doc/ch4/ProgressBar.tex
    doc/ch4/Table.tex
    doc/macros.tex
    doc/Makefile
    doc/vty-ui-users-manual.tex
    doc/title_page.tex
    doc/toc.tex

Source-Repository head
  type:     git
  location: git://github.com/jtdaugherty/vty-ui.git

Flag testing
    Description:     Build for testing
    Default:         False

Flag demos
    Description:     Build demonstration programs
    Default:         False

Library
  Build-Depends:
    base >= 4 && < 5,
    vty >= 4.6 && < 4.8,
    containers >= 0.2 && < 0.5,
    regex-pcre >= 0.94 && < 0.95,
    regex-base >= 0.93 && < 0.94,
    directory >= 1.0 && < 1.2,
    filepath >= 1.1 && < 1.3,
    unix >= 2.4 && < 2.6,
    mtl >= 2.0 && < 2.1,
    stm >= 2.1 && < 2.3,
    array >= 0.3 && < 0.4

  GHC-Options:       -Wall

  Hs-Source-Dirs:    src
  Exposed-Modules:
          Graphics.Vty.Widgets.All
          Graphics.Vty.Widgets.Text
          Graphics.Vty.Widgets.Core
          Graphics.Vty.Widgets.Box
          Graphics.Vty.Widgets.List
          Graphics.Vty.Widgets.Borders
          Graphics.Vty.Widgets.EventLoop
          Graphics.Vty.Widgets.Edit
          Graphics.Vty.Widgets.Util
          Graphics.Vty.Widgets.Table
          Graphics.Vty.Widgets.CheckBox
          Graphics.Vty.Widgets.Padding
          Graphics.Vty.Widgets.Limits
          Graphics.Vty.Widgets.Fixed
          Graphics.Vty.Widgets.Fills
          Graphics.Vty.Widgets.Centering
          Graphics.Vty.Widgets.Skins
          Graphics.Vty.Widgets.Events
          Graphics.Vty.Widgets.Dialog
          Graphics.Vty.Widgets.Button
          Graphics.Vty.Widgets.ProgressBar
          Graphics.Vty.Widgets.DirBrowser
          Graphics.Vty.Widgets.Group
          Text.Trans.Tokenize

Executable vty-ui-tests
  Build-Depends:
    QuickCheck >= 2.4 && < 2.5

  CPP-Options: -DTESTING
  GHC-Options: -Wall

  if !flag(testing)
    Buildable:     False
  end
  Hs-Source-Dirs:  src,test,test/src
  Main-is:         TestDriver.hs
  if os(darwin)
    Extra-Lib-Dirs:  /usr/lib

  Other-Modules:
        Tests.Instances
        Tests.Util
        Tests.FormattedText
        Tests.Tokenize

Executable vty-ui-list-demo
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         ListDemo.hs
  if os(darwin)
    Extra-Lib-Dirs:  /usr/lib
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 2.0 && < 2.1,
    vty >= 4.6 && < 4.8
  if !flag(demos)
    Buildable: False

Executable vty-ui-complex-demo
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         ComplexDemo.hs
  if os(darwin)
    Extra-Lib-Dirs:  /usr/lib
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 2.0 && < 2.1,
    bytestring >= 0.9 && < 1.0,
    time >= 1.1 && < 1.3,
    old-locale >= 1.0 && < 1.1,
    regex-pcre >= 0.94 && < 0.95,
    vty >= 4.6 && < 4.8
  if !flag(demos)
    Buildable: False

Executable vty-ui-dirbrowser-demo
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         DirBrowserDemo.hs
  if os(darwin)
    Extra-Lib-Dirs:  /usr/lib
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 2.0 && < 2.1,
    vty >= 4.6 && < 4.8
  if !flag(demos)
    Buildable: False

Executable vty-ui-phoneinput-demo
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         PhoneInputDemo.hs
  if os(darwin)
    Extra-Lib-Dirs:  /usr/lib
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 2.0 && < 2.1,
    vty >= 4.6 && < 4.8
  if !flag(demos)
    Buildable: False

Executable vty-ui-dialog-demo
  Hs-Source-Dirs:  src
  GHC-Options:     -Wall
  Main-is:         DialogDemo.hs
  if os(darwin)
    Extra-Lib-Dirs:  /usr/lib
  Build-Depends:
    base >= 4 && < 5,
    mtl >= 2.0 && < 2.1,
    vty >= 4.6 && < 4.8
  if !flag(demos)
    Buildable: False
